[package]
name = "ping-thing-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
solana-sdk = "1.14"
solana-client = "1.14"
solana-transaction-status = "1.14"
bs58 = "0.4"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prometheus = "0.13"
warp = "0.3"
anyhow = "1.0"
chrono = "0.4"
