[package]
name = "ping-thing-client-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
solana-compute-budget = "3.0.10"
solana-compute-budget-instruction = "3.0.10"
solana-hash = "3.0.0"
solana-keypair = "3.0.0"
solana-message = "3.0.0"
solana-pubkey = "3.0.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.0"
solana-transaction-status = "3.0.10"
solana-client = "3.0.0"
solana-sdk = "3.0.0"
solana-compute-budget-interface = "3.0.0"
solana-system-interface = "2.0.0"
base64 = "0.22.1"
bincode = "1.3.2"
bs58 = "0.5.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
prometheus = "0.14.0"
warp = { version = "0.4.2", features = ["server"] }
anyhow = "1.0.100"
chrono = "0.4.42"
tonic = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
futures = "0.3.31"
yellowstone-grpc-client = "10.1.1"
yellowstone-grpc-proto = "10.1.1"
